maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: type mismatch;
 found   : Unit
 required: List[Int]
  for(x <- 0 until X){
        ^